egress-gateways/first-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: first-egress-gw
  namespace: first
spec:
  selector:
    istio: first-egress-gw # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
