egress-gateways/second-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: second-egress-gw
  namespace: second
spec:
  selector:
    istio: second-egress-gw # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
